06_rect/grade.txt
Grading at Mon May 11 11:01:41 UTC 2020
Attempting to compile rectangle.c
rectangle.c: In function ‘intersection’:
rectangle.c:42:10: error: ‘rectangle {aka struct rect}’ has no member named ‘canonicalize’
   r1 = r1.canonicalize(r1);
          ^
rectangle.c:43:10: error: ‘rectangle {aka struct rect}’ has no member named ‘canonicalize’
   r2 = r2.canonicalize(r2);
          ^
The code did not compile!

Overall Grade: F
